--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,9 @@ html {
 	padding: 1.25rem 0.625rem 0.625rem 0.625rem;
 }
 .get-recipe {
-	background-image: url("reload-icon.png");
-    background-repeat: no-repeat;
-    background-position: center;
+	background-image: url("../img/reload-icon.png");
+	background-repeat: no-repeat;
+	background-position: center;
 	background-size: contain;
 	width: 100%;
 	height: 2rem;
@@ -26,10 +26,10 @@ h1 {
 input[type="checkbox"]{
 	width: 1.25rem;
 	height: 1.25rem;
-    vertical-align: middle;
-    margin-right: 0.625rem;
+	vertical-align: middle;
+	margin-right: 0.625rem;
 }
 
 label {
-    display: block;
+	display: block;
 }
